tests/machine/x/java/outer_join.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsouter_join3300747009/001/Main.java:44: error: incompatible types: Object cannot be converted to DataClass1
			_res3.add(new DataClass3(o, c));
			                            ^
/tmp/TestCompileValidProgramsouter_join3300747009/001/Main.java:50: error: incompatible types: Object cannot be converted to DataClass2
			_res3.add(new DataClass3(o, c));
			                         ^
/tmp/TestCompileValidProgramsouter_join3300747009/001/Main.java:58: error: incompatible types: DataClass2 cannot be converted to boolean
		if (row.order) {
		       ^
/tmp/TestCompileValidProgramsouter_join3300747009/001/Main.java:59: error: incompatible types: DataClass1 cannot be converted to boolean
			if (row.customer) {
			       ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors


  1| let customers = [
  2|   { id: 1, name: "Alice" },